@@ -1,4 +1,5 @@
-To (re)start X Windows, please type "startx" at the prompt below.
+To (re)start X Windows, please type "##DISPLAY_MANAGER" at the prompt below.
+There is also a rescue session for X using twm if you simply use "startx".
 
 Please report any bugs you find to http://bugs.gentoo.org. Be sure to include
 detailed information about how to reproduce the bug you are reporting.
