@@ -1,5 +1,11 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.566 2006/02/09 12:16:03 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.567 2006/02/09 15:09:17 wolf31o2 Exp $
+
+  09 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
+  livecd/files/livecd.motd.txt, targets/support/livecdfs-update.sh:
+  Updated the LiveCD motd to tell the user to run the display manager again,
+  rather than startx, while mentioning that startx is useful as a rescue X
+  session since it starts twm. This is catalyst 2.0_rc35.
 
   09 Feb 2006; Eric Edgar <rocket@gentoo.org> targets/support/create-iso.sh:
   Add hfs-hide options to mkisofs so macs boot
